--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-# Add your project dependencies here
+streamlit
+langchain
+langchain-groq
+langchain-community
+langchain-text-splitters
+langchain-chroma
+langchain-huggingface
+pypdf
+python-dotenv
+sentence-transformers
